<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:id="@+id/sec_Layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackground"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/area_correo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/img_cliente"
                                android:layout_width="25dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="5dp"
                                android:src="@android:drawable/ic_dialog_email"
                                android:tint="@color/colorSecondaryText" />

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/til_nombre"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                app:counterEnabled="true"
                                app:counterMaxLength="35"
                                app:counterOverflowTextAppearance="@style/CounterOverFlow"
                                app:counterTextAppearance="@style/Counter"
                                app:hintTextAppearance="@style/Hint">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/campo_correo"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:hint="@string/correo"
                                    android:inputType="textEmailAddress"
                                    android:singleLine="true" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/area_contrasena"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/img_contra"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="5dp"
                                android:src="@android:drawable/ic_lock_idle_lock"
                                android:tint="@color/colorSecondaryText" />

                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/til_contra"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                app:hintTextAppearance="@style/Hint"
                                app:passwordToggleEnabled="true">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/campo_contra"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:hint="@string/pass"
                                    android:inputType="textPassword"
                                    android:singleLine="true" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <CheckBox
                            android:id="@+id/cb_remember"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/recordar"
                            android:buttonTint="@color/colorPrimary"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14dp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_recuperar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/recuperar_pass"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14dp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_registrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/registrar"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14dp"
                    android:textStyle="italic" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_entrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_redondo"
                android:text="@string/entrar"
                android:textColor="@color/colorBackground" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>